--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -26,7 +26,8 @@
           <tr
             repeat.for="keyword of data | customSort: sort_keywords | filter:searchKeywordsTerm:filterKeywordsFunc | filter:searchLabelsTerm:filterLabelsFunc"
             click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword['Overlap'])}">
-            <td repeat.for="property of properties">${keyword[property]}</td>
+            <td css="opacity: ${getHighlight(keyword[property])}" repeat.for="property of properties">
+              ${keyword[property]}</td>
             <!-- <td>${keyword["Keyword"]}</td>
             <td>${keyword["KeyVis"]}</td>
             <td>${keyword["Mike"]}</td>
