Updated the name

--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -60,7 +60,7 @@
         <table>
           <thead>
             <tr>
-              <th style="cursor: pointer" click.delegate="setSortProperty('label', 'sort_labels')">Label</th>
+              <th style="cursor: pointer" click.delegate="setSortProperty('label', 'sort_labels')">Coocurrent Label</th>
               <th style="cursor: pointer" click.delegate="setSortProperty('count', 'sort_labels')">Count</th>
               </th>
             </tr>
