--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -8,11 +8,13 @@
     <i class="far fa-trash fa-2x" style="display: inline-block;vertical-align: middle; cursor: pointer"
       click.delegate="resetSearch()"></i>
     <button md-button click.delegate="setSortProperty('Overlap', 'sort_keywords')">Sort by Author Agreement</button>
-    <a md-button md-dropdown="activates: dropdown1;">Dataset: ${selectedDataset}</a>
-    <ul id="dropdown1">
-      <li><a click.trigger="setDataset('tool')">Tool Dataset</a></li>
-      <li><a click.trigger="setDataset('manual')">Manual Dataset</a></li>
-    </ul>
+    <div style="float: right; vertical-align: middle">
+      <a md-button md-dropdown="activates: dropdown1;">Dataset: ${selectedDataset}</a>
+      <ul id="dropdown1">
+        <li><a click.trigger="setDataset('tool')">Tool Dataset</a></li>
+        <li><a click.trigger="setDataset('manual')">Manual Dataset</a></li>
+      </ul>
+    </div>
   </div>
   <div class="row">
     <div class="col m8">
@@ -74,7 +76,7 @@
           </thead>
           <tbody>
             <tr style="cursor: pointer" repeat.for="cooc of selectedCooc | customSort: sort_labels"
-              click.delegate="selectLabel(cooc)">
+              click.delegate="selectCooc(cooc)">
               <td>${cooc["label"]} </td>
               <td>${cooc["count"]}</td>
             </tr>
