--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -7,7 +7,7 @@
       value.bind="searchLabelsTerm" placeholder="search Labels..."></input>
     <i class="far fa-trash fa-2x" style="display: inline-block;vertical-align: middle; cursor: pointer"
       click.delegate="resetSearch()"></i>
-    <button md-button click.delegate="setSortProperty('Overlap', 'sort_keywords')">Sort by Author Agreement</button>
+    <button md-button click.delegate="setKeywordSortProperty('Overlap')">Sort by Author Agreement</button>
     <div style="float: right; vertical-align: middle">
       <a md-button md-dropdown="activates: dropdown1;">Dataset: ${selectedDataset}</a>
       <ul id="dropdown1">
