--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -7,7 +7,7 @@
       value.bind="searchLabelsTerm" placeholder="search Labels..."></input>
     <i class="far fa-trash fa-2x" style="display: inline-block;vertical-align: middle; cursor: pointer"
       click.delegate="resetSearch()"></i>
-    <button md-button click.delegate="setKeywordSortProperty('Overlap')">Sort by Author Agreement</button>
+    <button md-button click.delegate="setOverlapSortProperty()">Sort by Author Agreement</button>
     <div style="float: right; vertical-align: middle">
       <a md-button md-dropdown="activates: dropdown1;">Dataset: ${selectedDataset}</a>
       <ul id="dropdown1">
@@ -15,6 +15,9 @@
         <li><a click.trigger="setDataset('manual')">Manual Dataset</a></li>
       </ul>
     </div>
+  </div>
+  <div>
+    <md-switch label-on="Overlap" label-off="Overlap_Category" checked.bind="overlap_property"></md-switch>
   </div>
   <div class="row">
     <div class="col m8">
@@ -34,8 +37,9 @@
         <tbody>
           <tr
             repeat.for="keyword of data | customSort: sort_keywords | filter:searchKeywordsTerm:filterKeywordsFunc | filter:searchLabelsTerm:filterLabelsFunc"
-            click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword['Overlap'])}">
+            click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword)}">
             <td css="opacity: ${getHighlight(keyword[property])}" repeat.for="property of properties">
+              <span style="font-size: smaller">${label_mapping.get(keyword[property])}<br></span>
               ${keyword[property]}</td>
             <!-- <td>${keyword["Keyword"]}</td>
             <td>${keyword["KeyVis"]}</td>
