--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -41,7 +41,8 @@
             repeat.for="keyword of data | customSort: sort_keywords | filter:searchKeywordsTerm:filterKeywordsFunc | filter:searchLabelsTerm:filterLabelsFunc"
             click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword)}">
             <td css="opacity: ${getHighlight(keyword[property])}" repeat.for="property of properties">
-              <span style="font-size: smaller">${label_mapping.get(keyword[property])}<br></span>
+              <span
+                style="font-size: smaller; color: rgba(0, 0, 0, 0.509)">${label_mapping.get(keyword[property])}<br></span>
               ${keyword[property]}</td>
             <!-- <td>${keyword["Keyword"]}</td>
             <td>${keyword["KeyVis"]}</td>
