--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -40,8 +40,7 @@
         <tbody>
           <tr
             repeat.for="keyword of data | customSort: sort_keywords | filter:searchKeywordsTerm:filterKeywordsFunc | filter:searchLabelsTerm:filterLabelsFunc"
-            click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword)}"
-            ref="keyword['element']">
+            click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword)}">
             <td css="opacity: ${getHighlight(keyword[property])}" repeat.for="property of properties">
               <span
                 style="font-size: smaller; color: rgba(0, 0, 0, 0.509)">${label_mapping.get(keyword[property])}<br></span>
