--- a/src/custom.css
+++ b/src/custom.css
@@ -1,3 +1,8 @@
 .bar-text {
   font-size: x-small;
 }
+
+md-checkbox>label>span {
+  padding-left: 25px !important;
+  padding-right: 5px !important
+}
