Show overlap histogram

--- a/src/views/compare.html
+++ b/src/views/compare.html
@@ -25,6 +25,7 @@
       </md-checkbox>
     </span>
     <button md-button click.delegate="setOverlapSortProperty()">Sort by Author Agreement</button>
+    <small-bars-obs data.bind="data" property="OverlapCount" xSize="100" ySize="60">
   </div>
   <div class="row">
     <div class="col m8" style="height: 80vh; overflow: auto" scrolltop.bind="scrollTop">
